
Mon Dec  6 21:32:16 PST 1999
(KainX)

Make this sucker build again.

-------------------------------------------------------------------------------

Wed Dec  8 10:57:56 PST 1999
(Mandrake)

nasty indention issues in ipc.c

-------------------------------------------------------------------------------

Wed Dec  8 11:05:27 PST 1999
(Mandrake)

more minor changes

-------------------------------------------------------------------------------

Fri Dec 10 10:27:22 PST 1999
(Raster)

auto resizing border parts patch for veretical text...

-------------------------------------------------------------------------------

Fri Dec 10 10:33:49 PST 1999
(Raster)

true64 fix........

-------------------------------------------------------------------------------

Sun Dec 12 13:17:45 PST 1999
(Raster)

ooooooops :) tabel paddign done wrong...

-------------------------------------------------------------------------------

Wed Dec 15 13:47:12 PST 1999
(KainX)

Patches from Peter Kjellerstedt <peter.kjellerstedt@axis.com>
for typos and such.

-------------------------------------------------------------------------------

Thu Dec 16 18:28:59 PST 1999
(Mandrake)

this is a test commit to see if the list works again.

-------------------------------------------------------------------------------

Tue Dec 21 08:02:15 PST 1999
(Raster)

add in patches from 2 AUTHORS for internationalisation...

-------------------------------------------------------------------------------

Tue Dec 21 08:12:29 PST 1999
(Raster)

fix some consitancies for text but peter um.. :) not all that patch was 
typos.. the original spelling was correct. I was using "English" not "American"
:) (note Enlish spelligns for colour is coloUr not color, and initialise is 
with an S not a Z in English) :)

-------------------------------------------------------------------------------

Tue Dec 21 08:23:33 PST 1999
(Raster)

patch for file finding internationalisation...